--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ title_separator          : "&#124;"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "윤기오"
 description              : "데이터 분석을 공부하는 블로그"
-url                      : "https://ykio.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://yunkio.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "yunkio/ykio.github.io"# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "yunkio/yunkio.github.io" #GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : "데이터 분석 Blog"# overrides the website title displayed in the masthead, use " " for no title
