--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
   avatar           : "/assets/images/profile.jpg" # path of avatar image, e.g. "/assets/images/profile.jpg"
   bio              : "데이터 분석을 공부하고 있습니다."
   location         : "Korea University SPS Lab."
-  email            : "yko22222@gmail.com"
+  email            : # "yko22222@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
