--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ author:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/yunkio"
     - label: "Notion"
-      icon: "fab fa-fw fa-link"
+      icon: "fab fa fa-link"
       url: https://yunkio.notion.site/Yun-Ki-O-a7f5ca01dd6543b5881049937ee4e123
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
