--- a/_config.yml
+++ b/_config.yml
@@ -113,9 +113,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/yunkio"
-    - label: "Notion"
+    - label: " Notion"
       icon: "fab fa fa-link"
-      url: https://yunkio.notion.site/Yun-Ki-O-a7f5ca01dd6543b5881049937ee4e123
+      url: "https://yunkio.notion.site/Yun-Ki-O-a7f5ca01dd6543b5881049937ee4e123"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
@@ -135,9 +135,9 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/yunkio"
-    - label: "Notion"
+    - label: " Notion"
       icon: "fab fa-fw fa-link"
-      url: https://yunkio.notion.site/Yun-Ki-O-a7f5ca01dd6543b5881049937ee4e123
+      url: "https://yunkio.notion.site/Yun-Ki-O-a7f5ca01dd6543b5881049937ee4e123"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
