--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,24 +1,14 @@
 # main links
-#   main:
-#  - title: "Quick-Start Guide"
-#    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
-  
-  
-# main links
 main:
   #- title: "Home"
   #  url: "/"
-  - title: "Year"
-    url: /year-archive/
+  #- title: "Introduce"
+  #  url: /about/
   - title: "Category"
-    url: /categories/
+  #  url: "/categories/list"
+  #- title: "All Post"
+    url: "/categories/"
   - title: "Tags"
     url: /tags/
+  - title: "Year"
+    url: "/year-archive/"
