--- a/_config.yml
+++ b/_config.yml
@@ -284,14 +284,14 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
 
 
   # _pages
   - scope:
-      path: "pages"
+      path: "_pages"
       type: pages
     values:
       layout: single
